--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ CLOUDINARY_CLOUD_NAME="ddjjyf2fw"
 CLOUDINARY_API_KEY="858285882828353"
 CLOUDINARY_API_SECRET="eEkhSnyDk1kFcktWtL0D5ksbXL8"
 CLOUDINARY_UPLOAD_PRESET="z13v00eo"
+CLOUDINARY_DIR="nourman_client_file"
